# unseen-awg

./: .buildinfo  .gitignore  .gitlab-ci.yml  AIDER_CONVENTIONS.md  CITATION.cff  LICENSE  README.md  api_documentation.html  conda-lock.yml  env.yml  genindex.html  how_to_deal_with_archived_data.html  how_to_train_wg.html  how_to_use_simulations.html  how_to_use_wg_to_create_simulations.html  index.html  installation.html  matplotlibrc  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  unzip_provided_datasets.sh  what_is_unseen_awg.html
.doctrees/: api_documentation.doctree  environment.pickle  how_to_deal_with_archived_data.doctree  how_to_train_wg.doctree  how_to_use_simulations.doctree  how_to_use_wg_to_create_simulations.doctree  index.doctree  installation.doctree  what_is_unseen_awg.doctree
.doctrees/api/: modules.doctree  unseen_awg.doctree
.github/: release-on-tag.yml
_modules/: index.html
_modules/unseen_awg/: data_classes.html  data_utils.html  (+9 more)
_sources/: api_documentation.md.txt  how_to_deal_with_archived_data.ipynb.txt  how_to_train_wg.ipynb.txt  how_to_use_simulations.ipynb.txt  how_to_use_wg_to_create_simulations.ipynb.txt  index.md.txt  installation.md.txt  what_is_unseen_awg.md.txt
api/: modules.html  unseen_awg.html
configs/: paths_template.yaml  variables.yaml
data/: era5_land_sea_mask_AR6_EU.nc  grid_impact_variables.nc  sample_ECMWF_reforecast_request.yml
tests/: test_probability_models.py  test_similarity_measures.py  test_time_steppers.py  test_timestep_utils.py  test_workflow.sh
workflow/: Snakefile
(+45 files in other folders)
